--- a/src/scss/_component.login.scss
+++ b/src/scss/_component.login.scss
@@ -19,6 +19,9 @@
     display: flex;
     flex-direction: column;
     padding: 5px;
+    @include media (">=tablet") {
+      font-size: 16px;
+    }
   }
 
   &_label {
